--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -22,6 +22,8 @@
 
 		.box-text {
 			@include index.borderStyle;
+			box-sizing: border-box;
+			width: 100%;
 			min-width: 280px;
 
 			flex: 1;
@@ -35,6 +37,11 @@
 
 			text-align: justify;
 			hyphens: auto;
+
+			@media (max-width: 750px) {
+				flex: none;
+			}
+	
 
 			h2 {
 				@include index.coloredFont;
@@ -69,11 +76,14 @@
 			min-width: 280px;
 
 			display: flex;
-			// justify-content: center;
 			align-items: center;
 
 			flex: 1;
 			flex-grow: 1.2;
+
+			@media (max-width: 750px) {
+				order: 2;
+			}
 		}
 	}
 
@@ -113,7 +123,7 @@
 		.box-robot {
 			@include index.borderStyle;
 			box-sizing: border-box;
-			// width: 100%;
+			width: 100%;
 
 			padding: 10px;
 			flex: 1;
@@ -122,6 +132,10 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+
+			@media (max-width: 665px) {
+				justify-content: left;
+			}
 
 			.robot-div {
 				aspect-ratio: 5/3;
@@ -192,6 +206,17 @@
 			flex: 1;
 			flex-grow: 1;
 			min-width: 270px;
+
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			overflow: hidden;
+			box-sizing: border-box;
+
+			img {
+				width: 550px;
+			}
 		}
 	}
 }
