--- a/src/pages/components/email/Email.scss
+++ b/src/pages/components/email/Email.scss
@@ -19,7 +19,7 @@
 			box-sizing: border-box;
 			margin: 10px;
 			padding: 5px;
-			border-radius: 5px;
+			// border-radius: 5px;
 			font-size: 1.8rem;
 			background-color: index.$background-color;
 			color: index.$text-color;
@@ -60,7 +60,7 @@
 					outline: none;
 					background-color: index.$background-color;
 					color: index.$text-color;
-					border-radius: 5px;
+					// border-radius: 5px;
 
 					border: solid 1px rgb(71, 69, 69);
 					box-shadow: 0 0 0 30px index.$background-color inset;
@@ -97,7 +97,7 @@
 		}
 		textarea {
 			box-sizing: border-box;
-			border-radius: 5px;
+			// border-radius: 5px;
 
 			padding: 15px 25px;
 			height: 150px;
