--- a/src/pages/scss/Github.scss
+++ b/src/pages/scss/Github.scss
@@ -49,7 +49,6 @@
 			padding: 25px;
 
 			img {
-				// width: 100%;
 				max-width: 320px;
 				min-width: 260px;
 			}
@@ -62,11 +61,17 @@
 		width: 100%;
 		margin-top: 15px;
 		padding: 25px;
+		overflow: hidden;
+		text-align: center;
 
 		a{
-			font-size: 5rem;
+			font-size: 4.5vw;
 			color: index.$text-color;
 			text-decoration: none;
+
+
+			
 		}
+
 	}
 }
