--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -14,7 +14,7 @@
 		max-width: 500px;
 		min-width: 250px;
 		flex: 1;
-		padding: 15px;
+		padding: 15px 0;
 		height: auto;
 		overflow: hidden;
 
@@ -25,31 +25,35 @@
 
 		// justify-content: center;
 		align-items: center;
-		color: index.$first-color;
 		text-decoration: none;
-
+		overflow: hidden;
+		
 		&:hover{
 			h3{
 				box-shadow: 0 0 10px index.$first-color;
 			}
 			
 		}
-
+		
 		.img-box {
+			box-sizing: border-box;
+			margin: 0 15px;
+			padding: 15px;
 			min-height: 235px;
 			max-height: 235px;
 			min-width: 250px;
 			max-width: 290px;
+			width: 100%;
 			overflow: hidden;
 			border-radius: 15px;
-
+			
 			img {
 				display: block;
 				justify-self: center;
 				height: 100%;
 			}
 		}
-
+		
 		.text-box {
 			margin-top: 15px;
 			display: flex;
@@ -57,8 +61,9 @@
 			flex-direction: column;
 			height: 35%;
 			gap: 15px;
-
+			
 			h3 {
+				color: index.$third-color;
 				box-sizing: border-box;
 				width: 250px;
 				padding: 5px 10px;
@@ -68,7 +73,7 @@
 				background-color: index.$background-color;
 				font-size: index.$font-size;
 				border: solid 1px rgba(255, 255, 255, 0.186);
-				border-radius: 5px;
+				// border-radius: 5px;
 			}
 
 			p {
@@ -78,7 +83,7 @@
 				font-size: index.$font-size;
 				border: 1px solid rgba(255, 255, 255, 0.186);
 				background-color: index.$background-color;
-				border-radius: 5px;
+				// border-radius: 5px;
 				text-align: center;
 				color: index.$text-color;
 				text-decoration: none;
